Fix image aspect ratios on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -61,6 +61,7 @@ h1, h2 {
     height: 100%;
     width: auto;
     display: block;
+    object-fit: contain;
     /*margin: 1rem auto;*/
     margin: 0;
 }
